--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,230 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.temp {
+  min-height: 100vh;
+}
+
+/* ================= Landing Page ================= */
+
+.header {
+  font-size: 75px;
+  color: #000;
+}
+
+@media only screen and (min-width: 600px) {
+  .header {
+    font-size: 100px;
+  }
+}
+
+.jumbotron {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  color: #000;
+  margin-bottom: 2rem;
+  background: url('../public/static/bg.jpg');
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  text-align: center;
+}
+
+.typing-container {
+  text-align: center;
+  width: 100%;
+}
+
+.social-link {
+  color: #fff;
+  background-color: #000;
+}
+
+.social-link:hover {
+  color: #fff;
+  background-color: #710d0d;
+}
+
+/* ================= Landing Page End ================= */
+
+/* ================= Navbar ================= */
+
+.underline {
+  cursor: pointer;
+  text-decoration: none;
+  color: #000;
+  border-bottom: solid #710d0d 2px;
+  transition: transform 0.25s ease-out;
+}
+
+.underline:hover {
+  color: #000;
+}
+
+.hover-underline-animation {
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+  color: #000;
+}
+
+.hover-underline-animation:hover {
+  color: #000;
+}
+
+.hover-underline-animation:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #710d0d;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.brand {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.navbar-brand {
+  color: #000!important;
+}
+
+.navbar-logo {
+  height: 40px;
+}
+
+.nav-transition {
+  transition: background-color .5s ease;
+}
+
+/* ================= Navbar End ================= */
+
+/* ================= Section ================= */
+
+.section-header {
+  font-size: 50px;
+}
+
+@media only screen and (min-width: 600px) {
+  .section-header {
+    font-size: 75px;
+  }
+}
+
+/* ================= Section End ================= */
+
+/* ================= About ================= */
+
+.about-pill {
+  padding: 10px;
+  min-width: 50px;
+}
+
+/* ================= About End ================= */
+
+/* ================= Team ================= */
+
+.card-img {
+  width: 200px;
+}
+
+.card-social-link {
+  color: #000;
+  background-color: #fff;
+}
+
+.card-social-link:hover {
+  color: #fff;
+  background-color: #710d0d;
+}
+
+.card{
+  width: 18em;
+  height: 28em;
+  border-radius: 2em;
+  background: #fff;
+  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
+
+.card:hover{
+  transform:scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+.card-pill {
+  padding: 10px;
+}
+
+/* ================= Team End ================= */
+
+/* ================= Getting Started ================= */
+
+.gs-event-jumbotron {
+  color: #000;
+  background-color: rgb(236, 232, 232);
+  margin-bottom: 2rem;
+  min-height: 35vw;
+  border-radius: 4em;
+  padding: 3em;
+  margin: 0;
+}
+
+.gs-event-jumbotron h2 {
+  font-size: 50px;
+}
+
+.article-card{
+  width: 15em;
+  padding: 3em;
+  height: 18em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
+
+.article-card:hover{
+  transform:scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+.news {
+  font-size: 50px;
+}
+
+/* ================= Getting Started End ================= */
+
+/* ================= Footer ================= */
+
+#footer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 14vh;
+  color: #000;
+}
+
+/* ================= Footer End ================= */
+
+.col {
+  display: flex;
+  justify-content: center;
 }
