Redesign and updated content

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ body {
 .header {
   font-size: 75px;
   color: #000;
+  margin-block-start: 0 !important;
 }
 
 @media only screen and (min-width: 600px) {
@@ -61,25 +62,32 @@ body {
 .jumbotron {
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-content: left;
   flex-direction: column;
   color: #000;
   margin-bottom: 2rem;
-  background: url('../public/static/bg.jpg');
+  background: url('../public/static/mobile-background.jpg');
   background-size: cover;
   height: 100vh;
   width: 100vw;
-  text-align: center;
+  text-align: left;
+}
+
+@media only screen and (min-width: 600px) {
+  .jumbotron {
+    background: url('../public/static/background.jpg');
+  }
 }
 
 .typing-container {
-  text-align: center;
+  text-align: left;
   width: 100%;
 }
 
 .social-link {
   color: #fff;
   background-color: #000;
+  transition: all 0.5s ease-in-out;
 }
 
 .social-link:hover {
@@ -164,6 +172,15 @@ body {
   }
 }
 
+.diagonal-box {
+	background-image: linear-gradient(45deg, #e8e8e8, #e8e8e8);
+	transform: skewY(-11deg);
+}
+
+.content {
+	transform: skewY(11deg) !important;
+}
+
 /* ================= Section End ================= */
 
 /* ================= About ================= */
@@ -175,80 +192,32 @@ body {
 
 /* ================= About End ================= */
 
-/* ================= Team ================= */
+/* ================= Project ================= */
 
-.card-img {
-  width: 200px;
+.project-card-img {
+  width: 100%;
+  height: 286;
 }
 
-.card-social-link {
-  color: #000;
-  background-color: #fff;
-}
-
-.card-social-link:hover {
-  color: #fff;
-  background-color: #710d0d;
-}
-
-.card{
+.project-card{
   width: 18em;
   height: 28em;
   border-radius: 2em;
   background: #fff;
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  transition: all .3s ease-in-out;
 }
 
-.card:hover{
+.project-card:hover{
   transform:scale(1.05);
   box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
 
-.card-pill {
+.project-card-pill {
   padding: 10px;
 }
 
-/* ================= Team End ================= */
-
-/* ================= Getting Started ================= */
-
-.gs-event-jumbotron {
-  color: #000;
-  background-color: rgb(236, 232, 232);
-  margin-bottom: 2rem;
-  min-height: 35vw;
-  border-radius: 4em;
-  padding: 3em;
-  margin: 0;
-}
-
-.gs-event-jumbotron h2 {
-  font-size: 50px;
-}
-
-.article-card{
-  width: 15em;
-  padding: 3em;
-  height: 18em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #fff;
-  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-}
-
-.article-card:hover{
-  transform:scale(1.05);
-  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-}
-
-.news {
-  font-size: 50px;
-}
-
-/* ================= Getting Started End ================= */
+/* ================= Project End ================= */
 
 /* ================= Footer ================= */
 
