--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 body {
   overflow-x: hidden;
+  font-family: 'League Spartan', sans-serif !important;
+  font-weight: 500;
+}
+
+@media only screen and (min-width: 600px) {
+  body {
+    background-color: #e8e8e8;
+  }
 }
 
 .App {
@@ -51,6 +59,7 @@ body {
   font-size: 75px;
   color: #000;
   margin-block-start: 0 !important;
+  font-weight: 700;
 }
 
 @media only screen and (min-width: 600px) {
@@ -75,8 +84,21 @@ body {
 
 @media only screen and (min-width: 600px) {
   .jumbotron {
-    background: url('../public/static/background.jpg');
+    background: url('../public/static/trees.png');
+    background-repeat: no-repeat;
+    height: 70vh;
+    margin-bottom: 0;
   }
+}
+
+.jumbo-header {
+  margin-bottom: 2rem;
+  padding-top: 10px;
+  padding-left: 50px;
+  height: 30vh;
+  text-align: left;
+  color: #000;
+  background-color: #fff;
 }
 
 .typing-container {
@@ -88,6 +110,8 @@ body {
   color: #fff;
   background-color: #000;
   transition: all 0.5s ease-in-out;
+  padding: 8px;
+  border-radius: 100px;
 }
 
 .social-link:hover {
@@ -163,6 +187,8 @@ body {
 /* ================= Section ================= */
 
 .section-header {
+  font-family: 'League Spartan', sans-serif;
+  font-weight: 500;
   font-size: 50px;
 }
 
@@ -174,14 +200,54 @@ body {
 
 .diagonal-box {
 	background-image: linear-gradient(45deg, #e8e8e8, #e8e8e8);
-	transform: skewY(-11deg);
+	transform: skewY(-5deg);
+}
+
+@media only screen and (min-width: 600px) {
+  .diagonal-box {
+    background-image: linear-gradient(45deg, #fff, #fff);
+  }
 }
 
 .content {
-	transform: skewY(11deg) !important;
+	transform: skewY(5deg) !important;
 }
 
 /* ================= Section End ================= */
+
+/* ================= Experience ================= */
+
+.exp {
+  background-color: #e8e8e8 !important;
+  color: #000 !important;
+  margin: 5px;
+  width: 100px;
+}
+
+.exp.active {
+  color: #fff !important;
+  background-color: #000 !important;
+}
+
+.exp-container {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+
+.exp-holder {
+  padding: 10px;
+  border: 2px solid #e8e8e8;
+  border-radius: 10px;
+  margin: 30px;
+  width: 50vw;
+}
+
+.exp-title {
+  color: #710d0d;
+}
+
+/* ================= Experience End ================= */
 
 /* ================= About ================= */
 
