--- a/src/App.css
+++ b/src/App.css
@@ -2,51 +2,8 @@ body {
   overflow-x: hidden;
   font-family: 'Open Sans', sans-serif !important;
   font-weight: 500;
-}
-
-@media only screen and (min-width: 600px) {
-  body {
-    background-color: #e8e8e8;
-  }
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: #000;
+  color: #E4D5B7;
 }
 
 .temp {
@@ -57,7 +14,6 @@ body {
 
 .header {
   font-size: 12vh;
-  color: #000;
   margin-block-start: 0 !important;
   font-weight: 800;
 }
@@ -65,24 +21,9 @@ body {
 .jumbotron {
   display: flex;
   justify-content: center;
-  align-content: left;
-  flex-direction: column;
-  color: #000;
-  margin-bottom: 2rem;
-  background: url('../public/static/mobile-background.jpg');
-  background-size: cover !important;
+  align-content: center;
   height: 100vh !important;
-  width: 100vw !important;
-  text-align: left;
-}
-
-@media only screen and (min-width: 600px) {
-  .jumbotron {
-    background: url('../public/static/trees.png');
-    background-repeat: no-repeat;
-    height: 70vh !important;
-    margin-bottom: 0;
-  }
+  flex-direction: column;
 }
 
 .jumbo-header {
@@ -91,17 +32,16 @@ body {
   padding-left: 50px;
   height: 30vh !important;
   text-align: left;
-  color: #000;
-  background-color: #fff;
 }
 
-.typing-container {
-  text-align: left;
-  width: 100%;
+.social-link-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .social-link {
-  color: #fff;
+  color: #E4D5B7;
   background-color: #000;
   transition: all 0.5s ease-in-out;
   padding: 8px;
@@ -109,130 +49,47 @@ body {
 }
 
 .social-link:hover {
-  color: #fff;
+  color: #E4D5B7;
   background-color: #710d0d;
 }
 
-.bird {
-  background-image: url('../public/static/birds.svg');
-  background-size: auto 100%;
-  width: 88px;
-  height: 125px;
-  will-change: background-position;
-  animation-name: fly-cycle;
-  animation-timing-function: steps(10);
-  animation-iteration-count: infinite;
+.header-line {
+  width: 100vw;
 }
 
-.bird--one {
-  animation-duration: 1s;
-  animation-delay: -0.5s;
+.header-left, .header-right {
+  width: 50vw;
+  overflow: hidden;
+  display: inline-block;
 }
 
-.bird--two {
-  animation-duration: 0.9s;
-  animation-delay: -0.75s;
+.header-left {
+  color:#710d0d;
+  transform: skew(0deg, -15deg);
 }
 
-.bird--three {
-  animation-duration: 1.25s;
-  animation-delay: -0.25s;
+.header-right {
+  color: #E4D5B7;
+  transform: skew(0deg, 15deg);
 }
 
-.bird--four {
-  animation-duration: 1.1s;
-  animation-delay: -0.5s;
+.header-left .header-content {
+  width: 100vw;
+  text-align: center;
 }
 
-.bird-container {
-  position: absolute;
-  top: 20%;
-  left: -10%;
-  transform: scale(0) translateX(-10vw);
-  will-change: transform;
-  animation-name: fly-right-one;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
+.header-right .header-content {
+  width: 100vw;
+  text-align: center;
+  transform: translate(-50vw);
 }
 
-.bird-container--one {
-  animation-duration: 15s;
-  animation-delay: 0;
-}
-
-.bird-container--two {
-  animation-duration: 16s;
-  animation-delay: 1s;
-}
-
-.bird-container--three {
-  animation-duration: 14.6s;
-  animation-delay: 9.5s;
-}
-
-.bird-container--four {
-  animation-duration: 16s;
-  animation-delay: 10.25s;
-}
-
-@keyframes fly-cycle {
-  100% {
-    background-position: -900px 0;
-  }
-}
-
-@keyframes fly-right-one {
-  0% {
-    transform: scale(0.3) translateX(-10vw);
-  }
-  10% {
-    transform: translateY(2vh) translateX(10vw) scale(0.4);
-  }
-  20% {
-    transform: translateY(0vh) translateX(30vw) scale(0.5);
-  }
-  30% {
-    transform: translateY(4vh) translateX(50vw) scale(0.6);
-  }
-  40% {
-    transform: translateY(2vh) translateX(70vw) scale(0.6);
-  }
-  50% {
-    transform: translateY(0vh) translateX(90vw) scale(0.6);
-  }
-  60% {
-    transform: translateY(0vh) translateX(110vw) scale(0.6);
-  }
-  100% {
-    transform: translateY(0vh) translateX(110vw) scale(0.6);
-  }
-}
-
-@keyframes fly-right-two {
-  0% {
-    transform: translateY(-2vh) translateX(-10vw) scale(0.5);
-  }
-  10% {
-    transform: translateY(0vh) translateX(10vw) scale(0.4);
-  }
-  20% {
-    transform: translateY(-4vh) translateX(30vw) scale(0.6);
-  }
-  30% {
-    transform: translateY(1vh) translateX(50vw) scale(0.45);
-  }
-  40% {
-    transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
-  }
-  50% {
-    transform: translateY(0vh) translateX(90vw) scale(0.45);
-  }
-  51% {
-    transform: translateY(0vh) translateX(110vw) scale(0.45);
-  }
-  100% {
-    transform: translateY(0vh) translateX(110vw) scale(0.45);
-  }
+.header-text {
+  display: inline-block;
+  font-size: 10vw;
+  text-transform: uppercase;
+  line-height: .8;
+  transition: ease-out .6s;
 }
 
 /* ================= Landing Page End ================= */
@@ -242,13 +99,12 @@ body {
 .underline {
   cursor: pointer;
   text-decoration: none;
-  color: #000;
-  border-bottom: solid #710d0d 2px;
+  border-bottom: solid #E4D5B7 2px;
   transition: transform 0.25s ease-out;
 }
 
 .underline:hover {
-  color: #000;
+  color: #E4D5B7;
 }
 
 .hover-underline-animation {
@@ -256,11 +112,11 @@ body {
   text-decoration: none;
   display: inline-block;
   position: relative;
-  color: #000;
+  color: #E4D5B7;
 }
 
 .hover-underline-animation:hover {
-  color: #000;
+  color: #E4D5B7;
 }
 
 .hover-underline-animation:after {
@@ -271,7 +127,7 @@ body {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #710d0d;
+  background-color: #E4D5B7;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -287,7 +143,7 @@ body {
 }
 
 .navbar-brand {
-  color: #000!important;
+  color: #E4D5B7 !important;
 }
 
 .navbar-logo {
@@ -315,18 +171,21 @@ body {
 }
 
 .diagonal-box {
-	background-image: linear-gradient(45deg, #e8e8e8, #e8e8e8);
+  background-image: linear-gradient(45deg, #E4D5B7, #E4D5B7);
+  color: #000;
 	transform: skewY(-5deg);
-}
-
-@media only screen and (min-width: 600px) {
-  .diagonal-box {
-    background-image: linear-gradient(45deg, #fff, #fff);
-  }
 }
 
 .content {
 	transform: skewY(5deg) !important;
+}
+
+hr {
+  background-color: #E4D5B7;
+}
+
+.experience-hr {
+  background-color: #000;
 }
 
 /* ================= Section End ================= */
@@ -334,15 +193,15 @@ body {
 /* ================= Experience ================= */
 
 .exp {
-  background-color: #e8e8e8 !important;
-  color: #000 !important;
+  background-color: #000 !important;
+  color: #E4D5B7 !important;
   margin: 5px;
   width: 175px;
 }
 
 .exp.active {
-  color: #fff !important;
-  background-color: #000 !important;
+  color: #E4D5B7 !important;
+  background-color: #710d0d !important;
 }
 
 .exp-container {
@@ -353,10 +212,10 @@ body {
 
 .exp-holder {
   padding: 10px;
-  border: 2px solid #e8e8e8;
+  border: 2px solid #000;
   border-radius: 10px;
   margin: 30px;
-  width: 50vw;
+  width: 60vw;
 }
 
 .exp-title {
@@ -370,6 +229,8 @@ body {
 .about-pill {
   padding: 10px;
   min-width: 50px;
+  background-color: #710d0d !important;
+  color: #E4D5B7;
 }
 
 /* ================= About End ================= */
@@ -384,10 +245,10 @@ body {
 .project-card{
   width: 18em;
   height: 28em;
-  border-radius: 2em;
-  background: #fff;
-  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+  border: solid 2px #E4D5B7;
+  background: #E4D5B7;
   transition: all .3s ease-in-out;
+  color: #000;
 }
 
 .project-card:hover{
@@ -397,6 +258,23 @@ body {
 
 .project-card-pill {
   padding: 10px;
+  color: #E4D5B7;
+}
+
+.project-modal {
+  color: #000;
+}
+
+.modal-content {
+  background: #E4D5B7 !important;
+}
+
+.modal-header {
+  border-bottom: solid 1px #000 !important;
+}
+
+.modal-footer {
+  border-top: solid 1px #000 !important;
 }
 
 /* ================= Project End ================= */
@@ -408,12 +286,29 @@ body {
   justify-content: center;
   flex-direction: column;
   height: 14vh;
-  color: #000;
 }
 
 /* ================= Footer End ================= */
 
-.col {
+/* ================= Mobile ================= */
+
+.mobile {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+  text-align: center;
 }
+
+.mobile-header {
+  font-size: 12vh;
+  font-weight: 800;
+}
+
+.typing-container {
+  width: 100%;
+}
+
+/* ================= Mobile End ================= */
