changing pill colour

--- a/src/App.css
+++ b/src/App.css
@@ -253,12 +253,12 @@ hr {
 
 .project-card:hover{
   transform:scale(1.05);
-  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
 
 .project-card-pill {
   padding: 10px;
   color: #E4D5B7;
+  background-color: #710d0d !important;
 }
 
 .project-modal {
